enum-response-derive/tests/ui/derive-struct.stderr
error: proc-macro derive panicked
 --> $DIR/derive-struct.rs:4:10
  |
4 | #[derive(EnumResponse)]
  |          ^^^^^^^^^^^^
  |
  = help: message: #[derive(EnumResponse)] can only be applied to enums. Test is not an enum.

